src/Cluster_jobs/nimrod_tests/Output/32bit_seed/err/stderr-9.txt
Warning message:
In read.table(file = file, header = header, sep = sep, quote = quote,  :
  incomplete final line found by readTableHeader on '/tmp/sig_MapcX4.csv'
ERROR (Eidos_ExecuteFunction_rmvnorm): function rmvnorm() requires that sigma, the variance-covariance matrix, be positive-definite.

Error on script line 385, character 13:

         effects = rmvnorm(1, pleio_mu, pleio_sigma);      // Calculate effects for m3 here since a mutation callback won't be called since it isn't autogenerated
                   ^^^^^^^
cat: //state/partition1/pbs/tmpdir/pbs.346014.tinmgr2/nimrodg-localact-6721694910908594920/959b1cf6-b90a-4360-ba51-20bace6fbb57/9447ce81-0160-46c9-b1ee-635a419b4c17/tmp/out_8T_null_means.csv: No such file or directory
cat: //state/partition1/pbs/tmpdir/pbs.346014.tinmgr2/nimrodg-localact-6721694910908594920/959b1cf6-b90a-4360-ba51-20bace6fbb57/9447ce81-0160-46c9-b1ee-635a419b4c17/tmp/out_8T_null_muts.csv: No such file or directory
cat: //state/partition1/pbs/tmpdir/pbs.346014.tinmgr2/nimrodg-localact-6721694910908594920/959b1cf6-b90a-4360-ba51-20bace6fbb57/9447ce81-0160-46c9-b1ee-635a419b4c17/tmp/out_8T_null_burnin.csv: No such file or directory
